--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,29 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>671</width>
+    <width>1000</width>
     <height>333</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Sa mère le tramway</string>
+   <string>Le tramway</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>671</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuTramway">
-    <property name="title">
-     <string>Tramway</string>
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QPushButton" name="newRameButton">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>270</y>
+      <width>114</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>addRame</string>
     </property>
    </widget>
-   <addaction name="menuTramway"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
